--- a/index.html
+++ b/index.html
@@ -136,6 +136,74 @@
                 margin: 0.5rem 0;
             }
         }
+    #learn-video {
+        margin-top: 2rem;
+        text-align: center;
+        padding: 2rem;
+        background-color: #2a2a3b;
+        color: #f4f4f4;
+        border-radius: 8px;
+    }
+
+    #learn-video h2 {
+        font-size: 1.8rem;
+        margin-bottom: 1rem;
+        text-transform: uppercase;
+        color: #00c4ff;
+    }
+
+    #learn-video p {
+        font-size: 1rem;
+        margin-bottom: 1.5rem;
+    }
+
+    /* Video container for responsiveness */
+    .video-container {
+    position: relative;
+    width: 100%;
+    max-width: 800px;
+    margin: 0 auto;
+    overflow: hidden;
+    border-radius: 8px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
+    border: 3px solid transparent;
+    background-image: linear-gradient(#2a2a3b, #2a2a3b),
+                      linear-gradient(135deg, #00ffff, #0088ff);
+    background-origin: border-box;
+    background-clip: content-box, border-box;
+}
+
+.video-container video {
+    width: 100%;
+    height: auto;
+    border: none;
+    border-radius: 8px;
+}
+
+/* เอฟเฟกต์เรืองแสง */
+.video-container::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    border-radius: 8px;
+    box-shadow: 0 0 15px #00ffff, 0 0 30px #00ffff, 0 0 45px #0088ff;
+    pointer-events: none;
+    animation: glow-effect 2s infinite alternate;
+}
+
+@keyframes glow-effect {
+    from {
+        box-shadow: 0 0 15px #00ffff, 0 0 30px #00ffff, 0 0 45px #0088ff;
+    }
+    to {
+        box-shadow: 0 0 25px #00ffff, 0 0 45px #00ffff, 0 0 60px #0088ff;
+    }
+}
+
+</style>
     </style>
     <script>
         function switchLanguage(lang) {
@@ -188,6 +256,19 @@
         <section id="game">
             <h2 data-lang data-en="Play Cyber Virus" data-th="เล่นไซเบอร์ไวรัส">Play Cyber Virus</h2>
             <p data-lang data-en="Experience the excitement of our game and learn more about cybersecurity." data-th="สัมผัสความตื่นเต้นของเกมของเราและเรียนรู้เพิ่มเติมเกี่ยวกับความปลอดภัยทางไซเบอร์">Experience the excitement of our game and learn more about cybersecurity. <a href="#">Download the game here</a>.</p>
+        </section>
+        <section id="learn-video">
+            <h2 data-lang data-en="Learn with Video" data-th="เรียนรู้ผ่านวิดีโอ">Learn with Video</h2>
+            <p data-lang data-en="Watch this video to understand more about computer viruses and cybersecurity." 
+               data-th="ชมวิดีโอนี้เพื่อเข้าใจเพิ่มเติมเกี่ยวกับไวรัสคอมพิวเตอร์และความปลอดภัยทางไซเบอร์">
+               Watch this video to understand more about computer viruses and cybersecurity.
+            </p>
+            <div class="video-container">
+                <video controls>
+                    <source src="สงครามไซเบอร์ครั้งแรกของโลก.mp4" type="video/mp4">
+                    <p>Your browser does not support HTML5 video. Here is a <a href="ส.mp4">link to the video</a> instead.</p>
+                </video>
+            </div>
         </section>
     </main>
     <footer>
