--- a/index.html
+++ b/index.html
@@ -289,9 +289,9 @@ body::before {
         <p data-lang data-en="Your Resource for Learning About Computer Viruses" data-th="แหล่งความรู้เกี่ยวกับไวรัสคอมพิวเตอร์">Your Resource for Learning About Computer Viruses</p>
     </header>
     <nav>
-        <a href="#viruses" data-lang data-en="Virus Types" data-th="ประเภทของไวรัส">Virus Types</a>
-        <a href="#prevention" data-lang data-en="Prevention" data-th="การป้องกัน">Prevention</a>
-        <a href="#game" data-lang data-en="Play the Game" data-th="เล่นเกม">Play the Game</a>
+        <a href="viruses" data-lang data-en="Virus Types" data-th="ประเภทของไวรัส">Virus Types</a>
+        <a href="prevention" data-lang data-en="Prevention" data-th="การป้องกัน">Prevention</a>
+        <a href="game" data-lang data-en="Play the Game" data-th="เล่นเกม">Play the Game</a>
         <a href="answers.html" data-lang data-en="Answers" data-th="เฉลยคำตอบ">Answers</a>
     </nav>
     <div class="language-switch">
