--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ body::before {
     </nav>
     <div class="language-switch">
         <p>Choose Language: 
-            <a href="#" onclick="switchLanguage('en')">English</a> | 
+            <a href="#" onclick="switchLanguage('en')">English</a> 
             <a href="#" onclick="switchLanguage('th')">ภาษาไทย</a>
         </p>
     </div>    
