--- a/answers.html
+++ b/answers.html
@@ -84,16 +84,37 @@
         <section>
             <h2 data-lang data-en="Answers" data-th="คำตอบ">Answers</h2>
             <ul>
-                <li data-lang data-en="Question 1: What is a Trojan Horse? Answer: A malicious software disguised as legitimate."
-                    data-th="คำถาม 1: ม้าโทรจันคืออะไร? คำตอบ: ซอฟต์แวร์ทที่เป็นอันตรายปลอมเป็นซอฟต์แวร์ทปกติ">Question 1: What is a Trojan Horse? Answer: A malicious software disguised as legitimate.
+                <li data-lang data-en="Question 1: What is a computer virus? Answer: b.Programs that are designed to damage or disrupt the operation of a computer*"
+                    data-th="คำถาม 1: ไวรัสคอมพิวเตอร์คืออะไร? คำตอบ: b.โปรแกรมที่ถูกออกแบบมาเพื่อทำลายหรือขัดขวางการทำงานของคอมพิวเตอร์ ">Question 1:  What is a computer virus?  Answer: b.Programs that are designed to damage or disrupt the operation of a computer.
                 </li>
                 <li data-lang data-en="Question 2: How does a Worm spread? Answer: Through self-replication in networks."
-                    data-th="คำถาม 2: เวิร์มแพร่กระจายอย่างไร? คำตอบ: ผ่านการจำลองตัวเองในเครือข่าย">Question 2: How does a Worm spread? Answer: Through self-replication in networks.
+                    data-th="คำถาม 2: เวิร์มแพร่กระจายอย่างไร? คำตอบ: c.ผ่านการจำลองตัวเองในเครือข่าย">Question 2: How does a Worm spread? Answer: c.Through self-replication in networks.
                 </li>
                 <li data-lang data-en="Question 3: What does Ransomware do? Answer: Encrypts your data and demands payment for decryption."
-                    data-th="คำถาม 3: แรนซัมแวร์ทำอะไร? คำตอบ: เข้ารหัสข้อมูลของคุณและเรียกร้างค่าไถ่เพื่อถอดรหัส">Question 3: What does Ransomware do? Answer: Encrypts your data and demands payment for decryption.
+                    data-th="คำถาม 3: แรนซัมแวร์ทำอะไร? คำตอบ: b.เข้ารหัสข้อมูลของคุณและเรียกร้องค่าไถ่เพื่อถอดรหัส">Question 3: What does Ransomware do? Answer: b.Encrypts your data and demands payment for decryption.
                 </li>
-            </ul>
+                <li data-lang data-en="Question 4: What does the term Phishing mean? Answer: a.Stealing personal information through fake websites."
+                    data-th="คำถาม 4: คำว่าPhishingหมายถึงอะไร? คำตอบ: a.การขโมยข้อมูลส่วนตัวผ่านเว็บไซต์ปลอม">Question 4: What does the term Phishing mean? Answer: a.Stealing personal information through fake websites.
+                </li>
+                <li data-lang data-en="Question 5: What are computer viruses created for? Answer: d.Damage or disrupt the operation of the system."
+                    data-th="คำถาม 5: ไวรัสคอมพิวเตอร์ถูกสร้างขึ้นเพื่ออะไร? คำตอบ: d.สร้างความเสียหายหรือรบกวนการทำงานของระบบ ">Question 5: What are computer viruses created for? Answer: d.Damage or disrupt the operation of the system.
+                </li>
+                <li data-lang data-en="Question 6: Which files are most vulnerable to viruses? Answer: c .exe files"
+                    data-th="คำถาม 6: ไฟล์ใดมีความเสี่ยงต่อไวรัสมากที่สุด? คำตอบ: c ไฟล์ .exe">Question 6: Which files are most vulnerable to viruses? Answer: c .exe files
+                </li>
+                <li data-lang data-en="Question 7: What is the function of the Antivirus program? Answer: a.Prevent and eliminate viruses in the system."
+                    data-th="คำถาม 7: โปรแกรม Antivirus มีหน้าที่อะไร? คำตอบ: a.ป้องกันและกำจัดไวรัสในระบบ">Question 7: What is the function of the Antivirus program? Answer: a.Prevent and eliminate viruses in the system.
+                </li>
+                <li data-lang data-en="Question 8: What is the purpose of Spyware? Answer: b.Stealing user information."
+                    data-th="คำถาม 8: Spyware มีจุดประสงค์อะไร? คำตอบ: b.ขโมยข้อมูลของผู้ใช้">Question 8: What is the purpose of Spyware? Answer: b.Stealing user information.
+                </li>
+                <li data-lang data-en="Question 9: What are the main causes of computer virus infections? Answer: d.Using untrusted files or programs."
+                    data-th="คำถาม 9: สาเหตุหลักของการติดไวรัสคอมพิวเตอร์คืออะไร? คำตอบ: d.การใช้งานไฟล์หรือโปรแกรมที่ไม่น่าเชื่อถือ">Question 9: What are the main causes of computer virus infections? Answer: d.Using untrusted files or programs.
+                  </li>
+                <li data-lang data-en="Question 10: How to prevent computer viruses? Answer: a.Install an Antivirus program and update it regularly."
+                    data-th="คำถาม 10: จะป้องกันไวรัสคอมพิวเตอร์อย่างไร? คำตอบ: a.ติดตั้งโปรแกรม Antivirus และอัปเดตเป็นประจำ ">Question 10:How to prevent computer viruses? Answer: a.Install an Antivirus program and update it regularly.
+                   </li>
+                </ul>
         </section>
     </main>
     <footer>
