--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>แบบกรอกข้อมูลการโอนเงิน</title>
+    <title>NestlePureLifexBUS - กรอกข้อมูล</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;700&display=swap');
         body {
@@ -28,57 +28,31 @@
             margin-bottom: 15px;
             letter-spacing: 1px;
         }
-        .subtitle {
-            font-size: 16px;
-            font-weight: 300;
-            margin-bottom: 25px;
-        }
         label {
             font-weight: bold;
             display: block;
             margin-top: 20px;
-        }
-        .member-container {
-            display: flex;
-            justify-content: space-between;
-            gap: 20px;
-        }
-        .member-options {
-            flex: 1;
             text-align: left;
         }
-        .member-options label {
-            display: block;
-            padding: 8px;
-            background: rgba(255, 255, 255, 0.15);
-            border-radius: 6px;
-            margin-bottom: 5px;
-            cursor: pointer;
-            transition: 0.3s;
-        }
-        .member-options label:hover {
-            background: rgba(255, 255, 255, 0.25);
-        }
-        input[type="checkbox"] {
-            margin-right: 10px;
-        }
-        input[type="text"], input[type="file"] {
+        input, textarea {
             width: 100%;
             padding: 12px;
-            margin-top: 10px;
+            margin-top: 5px;
             border: none;
             background: rgba(255, 255, 255, 0.2);
             color: white;
             border-radius: 6px;
-            text-align: center;
-            font-size: 18px;
-            font-weight: bold;
+            font-size: 16px;
         }
-        .file-container {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            margin-top: 10px;
+        textarea {
+            resize: none;
+            height: 80px;
+        }
+        .note {
+            font-size: 14px;
+            color: #ff7f7f;
+            margin-top: 5px;
+            text-align: left;
         }
         button {
             background-color: white;
@@ -96,75 +70,21 @@
         button:hover {
             background-color: #ddd;
         }
-        .cancel-btn {
-            background-color: red;
-            color: white;
-            padding: 10px;
-            border-radius: 6px;
-            cursor: pointer;
-            font-size: 14px;
-        }
     </style>
-    <script>
-        function updateAmount() {
-            let selectedMembers = document.querySelectorAll('input[type=checkbox]:checked');
-            let amount = selectedMembers.length * 300;
-            document.getElementById("amount").value = amount;
-        }
-        function clearFile() {
-            document.getElementById("slip").value = "";
-        }
-    </script>
 </head>
 <body>
     <div class="container">
         <h2>NestlePureLife x BUS</h2>
-        <p class="subtitle">แบบกรอกข้อมูลการโอนเงิน</p>
-        <form>
-            <div class="member-container">
-                <div class="member-options">
-                    <label>เลือกเมมเบอร์ Set A:</label>
-                    <label><input type="checkbox" name="memberA" onchange="updateAmount()"> อลัน</label>
-                    <label><input type="checkbox" name="memberA" onchange="updateAmount()"> มาร์ค</label>
-                    <label><input type="checkbox" name="memberA" onchange="updateAmount()"> ขุนพล</label>
-                    <label><input type="checkbox" name="memberA" onchange="updateAmount()"> ฮาร์ท</label>
-                    <label><input type="checkbox" name="memberA" onchange="updateAmount()"> จินวุค</label>
-                    <label><input type="checkbox" name="memberA" onchange="updateAmount()"> เน้ก</label>
-                    <label><input type="checkbox" name="memberA" onchange="updateAmount()"> ไทย</label>
-                    <label><input type="checkbox" name="memberA" onchange="updateAmount()"> คอปปอร์</label>
-                    <label><input type="checkbox" name="memberA" onchange="updateAmount()"> เอเอ</label>
-                    <label><input type="checkbox" name="memberA" onchange="updateAmount()"> จั๋ง</label>
-                    <label><input type="checkbox" name="memberA" onchange="updateAmount()"> ภีม</label>
-                    <label><input type="checkbox" name="memberA" onchange="updateAmount()"> ไม่ระบุ</label>
+        <p class="subtitle">กรุณากรอกข้อมูลให้ครบถ้วน</p>
+        <form action="payment.html" method="GET">
+            <label for="twitter">Twitter Account เพิ่ม @ (Ex.@pccream__pp)</label>
+            <input type="text" id="twitter" name="twitter" placeholder="@yourusername" required>
 
-                </div>
-                <div class="member-options">
-                    <label>เลือกเมมเบอร์ Set B:</label>
-                    <label><input type="checkbox" name="memberB" onchange="updateAmount()"> อลัน</label>
-                    <label><input type="checkbox" name="memberB" onchange="updateAmount()"> มาร์ค</label>
-                    <label><input type="checkbox" name="memberB" onchange="updateAmount()"> ขุนพล</label>
-                    <label><input type="checkbox" name="memberB" onchange="updateAmount()"> ฮาร์ท</label>
-                    <label><input type="checkbox" name="memberB" onchange="updateAmount()"> จินวุค</label>
-                    <label><input type="checkbox" name="memberB" onchange="updateAmount()"> เน้ก</label>
-                    <label><input type="checkbox" name="memberB" onchange="updateAmount()"> ไทย</label>
-                    <label><input type="checkbox" name="memberB" onchange="updateAmount()"> คอปปอร์</label>
-                    <label><input type="checkbox" name="memberB" onchange="updateAmount()"> เอเอ</label>
-                    <label><input type="checkbox" name="memberB" onchange="updateAmount()"> จั๋ง</label>
-                    <label><input type="checkbox" name="memberB" onchange="updateAmount()"> ภีม</label>
-                    <label><input type="checkbox" name="memberB" onchange="updateAmount()"> ไม่ระบุ</label>
+            <label for="address">ชื่อผู้รับ - ที่อยู่ - รหัสไปรษณีย์ - เบอร์โทร</label>
+            <textarea id="address" name="address" placeholder="กรุณากรอกข้อมูลให้ครบถ้วน" required></textarea>
+            <p class="note">ถ้าข้อมูลไม่ครบ ของตีกลับ ต้องออกค่าส่งใหม่เองนะคะ</p>
 
-                </div>
-            </div>
-            <label for="amount">ยอดโอน (บาท):</label>
-            <input type="text" id="amount" name="amount" value="0" readonly>
-            
-            <label for="slip">แนบสลิปการโอน:</label>
-            <div class="file-container">
-                <input type="file" id="slip" name="slip" accept="image/*">
-                <button type="button" class="cancel-btn" onclick="clearFile()">ยกเลิก</button>
-            </div>
-            
-            <button type="submit">ส่งข้อมูล</button>
+            <button type="submit">ถัดไป</button>
         </form>
     </div>
 </body>
