--- a/index.html
+++ b/index.html
@@ -1,123 +1,293 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NestlePureLife x BUS - กรอกข้อมูล</title>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;700&display=swap');
-        
-        * {
-            box-sizing: border-box;
-            margin: 0;
-            padding: 0;
-        }
+  <meta charset="UTF-8">
+  <title>NestlePureLife x BUS ฟอร์มโอนเงิน</title>
+  <style>
+    @keyframes fadeInUp {
+      0% { opacity: 0; transform: translateY(20px); }
+      100% { opacity: 1; transform: translateY(0); }
+    }
 
-        body {
-            font-family: 'Raleway', sans-serif;
-            background: linear-gradient(to bottom, #111, #333);
-            color: white;
-            text-align: center;
-            padding: 20px;
-        }
+    * {
+      box-sizing: border-box;
+    }
 
-        .container {
-            background: rgba(255, 255, 255, 0.1);
-            max-width: 90%;
-            width: 600px;
-            margin: auto;
-            padding: 30px;
-            border-radius: 16px;
-            box-shadow: 0 8px 16px rgba(255, 255, 255, 0.2);
-        }
+    body {
+      font-family: 'Sarabun', 'Helvetica Neue', sans-serif;
+      background: linear-gradient(to right, #fdfbfb, #ebedee);
+      padding: 40px 20px;
+      color: #2c2c2c;
+      animation: fadeInUp 0.8s ease-out;
+    }
 
-        h2 {
-            font-weight: 700;
-            text-transform: uppercase;
-            margin-bottom: 15px;
-            letter-spacing: 1px;
-        }
+    h1 {
+      text-align: center;
+      font-size: 2.5rem;
+      font-weight: 700;
+      margin-bottom: 30px;
+      background: linear-gradient(to right, #89c9f9, #ffcce0);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
 
-        label {
-            font-weight: bold;
-            display: block;
-            margin-top: 20px;
-            text-align: left;
-        }
+    form {
+      max-width: 700px;
+      margin: auto;
+      background: #ffffff;
+      padding: 40px;
+      border-radius: 20px;
+      box-shadow: 0 8px 25px rgba(137, 201, 249, 0.2);
+      border-top: 6px solid #ffcce0;
+      animation: fadeInUp 1s ease-out;
+    }
 
-        input, textarea {
-            width: 100%;
-            padding: 12px;
-            margin-top: 5px;
-            border: none;
-            background: rgba(255, 255, 255, 0.2);
-            color: white;
-            border-radius: 6px;
-            font-size: 16px;
-        }
+    .note {
+      background: #f0f8ff;
+      padding: 20px 25px;
+      border-left: 5px solid #89c9f9;
+      border-radius: 12px;
+      margin-bottom: 30px;
+      font-size: 1rem;
+      line-height: 1.6;
+      color: #333;
+    }
 
-        textarea {
-            resize: none;
-            height: 100px;
-        }
+    label {
+      display: block;
+      margin: 25px 0 10px;
+      font-weight: 600;
+      font-size: 1rem;
+      color: #003366;
+    }
 
-        .note {
-            font-size: 14px;
-            color: #ff7f7f;
-            margin-top: 5px;
-            text-align: left;
-        }
+    input[type="text"],
+    input[type="file"],
+    textarea {
+      width: 100%;
+      padding: 12px 14px;
+      border-radius: 10px;
+      border: 1px solid #ccd9ea;
+      background-color: #fff;
+      font-size: 1rem;
+      transition: 0.3s;
+    }
 
-        button {
-            background-color: white;
-            color: black;
-            border: none;
-            padding: 14px;
-            width: 100%;
-            margin-top: 25px;
-            border-radius: 8px;
-            cursor: pointer;
-            font-weight: bold;
-            text-transform: uppercase;
-            transition: 0.3s;
-        }
+    input[type="text"]:focus,
+    textarea:focus {
+      border-color: #89c9f9;
+      outline: none;
+      box-shadow: 0 0 5px rgba(137, 201, 249, 0.3);
+    }
 
-        button:hover {
-            background-color: #ddd;
-        }
+    #setA, #setB {
+      padding: 20px;
+      background-color: #fcfcff;
+      border: 1px solid #e0e8f0;
+      border-radius: 12px;
+      margin-top: 15px;
+    }
 
-        /* ทำให้รองรับทุกอุปกรณ์ */
-        @media (max-width: 768px) {
-            .container {
-                width: 95%;
-                padding: 20px;
-            }
-            
-            input, textarea {
-                font-size: 14px;
-                padding: 10px;
-            }
+    #setA label, #setB label {
+      margin-bottom: 10px;
+      font-weight: 600;
+      font-size: 1rem;
+      color: #005bac;
+    }
 
-            button {
-                padding: 12px;
-            }
-        }
-    </style>
+    input[type="checkbox"] {
+      margin-right: 8px;
+      margin-top: 10px;
+      accent-color: #ffcce0;
+      transition: transform 0.1s ease-in-out;
+    }
+
+    input[type="checkbox"]:active {
+      transform: scale(1.2);
+    }
+
+    button {
+      display: block;
+      width: 100%;
+      background: linear-gradient(135deg, #89c9f9, #ffcce0);
+      color: #003366;
+      padding: 14px;
+      border: none;
+      border-radius: 12px;
+      font-size: 1.1rem;
+      font-weight: 600;
+      cursor: pointer;
+      margin-top: 35px;
+      transition: background 0.3s, transform 0.2s, box-shadow 0.3s;
+    }
+
+    button:hover {
+      background: linear-gradient(135deg, #ffcce0, #fff2b2);
+      box-shadow: 0 8px 20px rgba(255, 204, 224, 0.4);
+      transform: translateY(-2px) scale(1.02);
+    }
+
+    #amount {
+      background-color: #fff9f9;
+      font-weight: bold;
+      color: #d2678e;
+    }
+
+    textarea {
+      resize: vertical;
+    }
+
+    @media (max-width: 768px) {
+      form {
+        padding: 30px 20px;
+      }
+
+      h1 {
+        font-size: 2rem;
+      }
+
+      .note {
+        font-size: 0.95rem;
+        padding: 15px 20px;
+      }
+
+      label {
+        font-size: 0.95rem;
+      }
+
+      button {
+        font-size: 1rem;
+      }
+    }
+
+    @media (max-width: 480px) {
+      h1 {
+        font-size: 1.7rem;
+      }
+
+      form {
+        padding: 25px 15px;
+      }
+
+      .note {
+        font-size: 0.9rem;
+      }
+
+      input[type="text"],
+      input[type="file"],
+      textarea {
+        font-size: 0.95rem;
+      }
+
+      button {
+        padding: 12px;
+        font-size: 1rem;
+      }
+    }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <h2>NestlePureLife x BUS</h2>
-        <p class="subtitle">กรุณากรอกข้อมูลให้ครบถ้วน</p>
-        <form action="payment.html" method="GET">
-            <label for="twitter">Twitter Account เพิ่ม @ (Ex.@pccream__pp)</label>
-            <input type="text" id="twitter" name="twitter" placeholder="@yourusername" required>
+  <h1>NestlePureLife x BUS</h1>
+  <div class="note">
+    𝆚 เมมเบอละ 300 บาท / ได้ครบ 2 ver.<br>
+    𝆚 ส่งฟรี 🚚<br>
+    𝆚 หากเป็นพื้นที่ห่างไกล +50 บาท<br><br>
+    ช่องทางการชำระเงิน:<br>
+    𝆚 ธนาคารไทยพาณิชย์<br>
+    𝆚 เลขบัญชี 439-078532-2<br>
+    𝆚 ชื่อบัญชี นางสาวพรธิดา ชะรอยรัมย์
+  </div>
 
-            <label for="address">ชื่อผู้รับ - ที่อยู่ - รหัสไปรษณีย์ - เบอร์โทร</label>
-            <textarea id="address" name="address" placeholder="กรุณากรอกข้อมูลให้ครบถ้วน" required></textarea>
-            <p class="note">* ถ้าข้อมูลไม่ครบ ของตีกลับ ต้องออกค่าส่งใหม่เองนะคะ</p>
+  <form id="paymentForm">
+    <label>1. Twitter Account (@...):</label>
+    <input type="text" name="twitter" required>
 
-            <button type="submit">ถัดไป</button>
-        </form>
+    <!-- Set A -->
+    <div id="setA">
+      <label>2.1 เลือกเมมเบอร์ที่จอง Set A:</label><br>
+      <input type="checkbox" name="setA[]" value="มาร์ค" onclick="calculateTotal()"> มาร์ค<br>
+      <input type="checkbox" name="setA[]" value="ขุนพล" onclick="calculateTotal()"> ขุนพล<br>
+      <input type="checkbox" name="setA[]" value="ฮาร์ท" onclick="calculateTotal()"> ฮาร์ท<br>
+      <input type="checkbox" name="setA[]" value="จินวุค" onclick="calculateTotal()"> จินวุค<br>
+      <input type="checkbox" name="setA[]" value="เน้ก" onclick="calculateTotal()"> เน้ก<br>
+      <input type="checkbox" name="setA[]" value="ไทย" onclick="calculateTotal()"> ไทย<br>
+      <input type="checkbox" name="setA[]" value="คอปเปอร์" onclick="calculateTotal()"> คอปเปอร์<br>
+      <input type="checkbox" name="setA[]" value="เอเอ" onclick="calculateTotal()"> เอเอ<br>
+      <input type="checkbox" name="setA[]" value="จั๋ง" onclick="calculateTotal()"> จั๋ง<br>
+      <input type="checkbox" name="setA[]" value="ภีม" onclick="calculateTotal()"> ภีม<br>
+      <input type="checkbox" name="setA[]" value="ไม่ระบุ" onclick="calculateTotal()"> ไม่ระบุ<br>
     </div>
+
+    <!-- Set B -->
+    <div id="setB">
+      <label>2.2 เลือกเมมเบอร์ที่จอง Set B:</label><br>
+      <input type="checkbox" name="setB[]" value="มาร์ค" onclick="calculateTotal()"> มาร์ค<br>
+      <input type="checkbox" name="setB[]" value="ขุนพล" onclick="calculateTotal()"> ขุนพล<br>
+      <input type="checkbox" name="setB[]" value="ฮาร์ท" onclick="calculateTotal()"> ฮาร์ท<br>
+      <input type="checkbox" name="setB[]" value="จินวุค" onclick="calculateTotal()"> จินวุค<br>
+      <input type="checkbox" name="setB[]" value="เน้ก" onclick="calculateTotal()"> เน้ก<br>
+      <input type="checkbox" name="setB[]" value="ไทย" onclick="calculateTotal()"> ไทย<br>
+      <input type="checkbox" name="setB[]" value="คอปเปอร์" onclick="calculateTotal()"> คอปเปอร์<br>
+      <input type="checkbox" name="setB[]" value="เอเอ" onclick="calculateTotal()"> เอเอ<br>
+      <input type="checkbox" name="setB[]" value="จั๋ง" onclick="calculateTotal()"> จั๋ง<br>
+      <input type="checkbox" name="setB[]" value="ภีม" onclick="calculateTotal()"> ภีม<br>
+      <input type="checkbox" name="setB[]" value="ไม่ระบุ" onclick="calculateTotal()"> ไม่ระบุ<br>
+    </div>
+
+    <label>3. ยอดโอน (ระบบจะคำนวณอัตโนมัติ):</label>
+    <input type="text" name="totalAmount" id="amount" readonly required>
+
+    <label>4. ชื่อผู้รับ - ที่อยู่ - รหัสไปรษณีย์ - เบอร์โทร:</label>
+    <textarea name="address" rows="3" required></textarea>
+    <div class="note">*ถ้าข้อมูลไม่ครบ ของตีกลับ ต้องออกค่าส่งใหม่เองนะคะ</div>
+
+    <label>5. แนบสลิปการโอน (.jpg, .png):</label>
+    <input type="file" name="slip" id="slip" accept="image/*" required>
+
+    <button type="submit">ส่งฟอร์ม</button>
+  </form>
+
+  <script>
+    function calculateTotal() {
+      const selectedCheckboxes = document.querySelectorAll('#setA input[type="checkbox"]:checked, #setB input[type="checkbox"]:checked');
+      const totalAmount = selectedCheckboxes.length * 300;
+      document.getElementById("amount").value = totalAmount;
+    }
+
+    const form = document.getElementById("paymentForm");
+    const amountInput = document.getElementById("amount");
+
+    form.addEventListener("submit", async function (e) {
+      e.preventDefault();
+
+      const slipFile = document.getElementById("slip").files[0];
+      const reader = new FileReader();
+      reader.onloadend = async function () {
+        const base64String = reader.result.split(",")[1];
+
+        const setAValues = [...document.querySelectorAll('input[name="setA[]"]:checked')].map(el => el.value).join(", ");
+        const setBValues = [...document.querySelectorAll('input[name="setB[]"]:checked')].map(el => el.value).join(", ");
+
+        const formData = new URLSearchParams();
+        formData.append("twitter", form.twitter.value);
+        formData.append("setA", setAValues);
+        formData.append("setB", setBValues);
+        formData.append("totalAmount", form.totalAmount.value);
+        formData.append("address", form.address.value);
+        formData.append("slipBytes", base64String);
+
+        const response = await fetch("https://script.google.com/macros/s/AKfycbxv6yv8dOj3xHkpgNYqE8oxl83bVV0nkTeYwSmwEZkadR17NvBmcxPgteMZ8WlW1AqI/exec", {
+          method: "POST",
+          body: formData,
+        });
+
+        const result = await response.text();
+        alert(result);
+        form.reset();
+        amountInput.value = "";
+      };
+      reader.readAsDataURL(slipFile);
+    });
+  </script>
 </body>
 </html>
