--- a/index.html
+++ b/index.html
@@ -88,22 +88,36 @@
       margin-top: 15px;
     }
 
-    #setA label, #setB label {
-      margin-bottom: 10px;
-      font-weight: 600;
-      font-size: 1rem;
-      color: #005bac;
-    }
-
-    input[type="checkbox"] {
-      margin-right: 8px;
+    .checkbox-group {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 12px 20px;
       margin-top: 10px;
-      accent-color: #ffcce0;
-      transition: transform 0.1s ease-in-out;
     }
 
-    input[type="checkbox"]:active {
-      transform: scale(1.2);
+    .checkbox-group label {
+      display: flex;
+      align-items: center;
+      font-size: 1rem;
+      font-weight: 500;
+      color: #333;
+      background-color: #f9f9ff;
+      padding: 8px 14px;
+      border-radius: 8px;
+      border: 1px solid #e0e0e0;
+      cursor: pointer;
+      transition: background 0.2s;
+    }
+
+    .checkbox-group label:hover {
+      background-color: #f0f8ff;
+    }
+
+    .checkbox-group input[type="checkbox"] {
+      width: 20px;
+      height: 20px;
+      margin-right: 10px;
+      accent-color: #ffcce0;
     }
 
     button {
@@ -204,34 +218,40 @@
 
     <!-- Set A -->
     <div id="setA">
-      <label>2.1 เลือกเมมเบอร์ที่จอง Set A:</label><br>
-      <input type="checkbox" name="setA[]" value="มาร์ค" onclick="calculateTotal()"> มาร์ค<br>
-      <input type="checkbox" name="setA[]" value="ขุนพล" onclick="calculateTotal()"> ขุนพล<br>
-      <input type="checkbox" name="setA[]" value="ฮาร์ท" onclick="calculateTotal()"> ฮาร์ท<br>
-      <input type="checkbox" name="setA[]" value="จินวุค" onclick="calculateTotal()"> จินวุค<br>
-      <input type="checkbox" name="setA[]" value="เน้ก" onclick="calculateTotal()"> เน้ก<br>
-      <input type="checkbox" name="setA[]" value="ไทย" onclick="calculateTotal()"> ไทย<br>
-      <input type="checkbox" name="setA[]" value="คอปเปอร์" onclick="calculateTotal()"> คอปเปอร์<br>
-      <input type="checkbox" name="setA[]" value="เอเอ" onclick="calculateTotal()"> เอเอ<br>
-      <input type="checkbox" name="setA[]" value="จั๋ง" onclick="calculateTotal()"> จั๋ง<br>
-      <input type="checkbox" name="setA[]" value="ภีม" onclick="calculateTotal()"> ภีม<br>
-      <input type="checkbox" name="setA[]" value="ไม่ระบุ" onclick="calculateTotal()"> ไม่ระบุ<br>
+      <label>2.1 เลือกเมมเบอร์ที่จอง Set A:</label>
+      <div class="checkbox-group">
+        <label><input type="checkbox" name="setA[]" value="อลัน" onclick="calculateTotal()"> อลัน</label>
+        <label><input type="checkbox" name="setA[]" value="มาร์ค" onclick="calculateTotal()"> มาร์ค</label>
+        <label><input type="checkbox" name="setA[]" value="ขุนพล" onclick="calculateTotal()"> ขุนพล</label>
+        <label><input type="checkbox" name="setA[]" value="ฮาร์ท" onclick="calculateTotal()"> ฮาร์ท</label>
+        <label><input type="checkbox" name="setA[]" value="จินวุค" onclick="calculateTotal()"> จินวุค</label>
+        <label><input type="checkbox" name="setA[]" value="เน้ก" onclick="calculateTotal()"> เน้ก</label>
+        <label><input type="checkbox" name="setA[]" value="ไทย" onclick="calculateTotal()"> ไทย</label>
+        <label><input type="checkbox" name="setA[]" value="คอปเปอร์" onclick="calculateTotal()"> คอปเปอร์</label>
+        <label><input type="checkbox" name="setA[]" value="เอเอ" onclick="calculateTotal()"> เอเอ</label>
+        <label><input type="checkbox" name="setA[]" value="จั๋ง" onclick="calculateTotal()"> จั๋ง</label>
+        <label><input type="checkbox" name="setA[]" value="ภีม" onclick="calculateTotal()"> ภีม</label>
+        <label><input type="checkbox" name="setA[]" value="ไม่ระบุ" onclick="calculateTotal()"> ไม่ระบุ</label>
+      </div>
     </div>
 
     <!-- Set B -->
     <div id="setB">
-      <label>2.2 เลือกเมมเบอร์ที่จอง Set B:</label><br>
-      <input type="checkbox" name="setB[]" value="มาร์ค" onclick="calculateTotal()"> มาร์ค<br>
-      <input type="checkbox" name="setB[]" value="ขุนพล" onclick="calculateTotal()"> ขุนพล<br>
-      <input type="checkbox" name="setB[]" value="ฮาร์ท" onclick="calculateTotal()"> ฮาร์ท<br>
-      <input type="checkbox" name="setB[]" value="จินวุค" onclick="calculateTotal()"> จินวุค<br>
-      <input type="checkbox" name="setB[]" value="เน้ก" onclick="calculateTotal()"> เน้ก<br>
-      <input type="checkbox" name="setB[]" value="ไทย" onclick="calculateTotal()"> ไทย<br>
-      <input type="checkbox" name="setB[]" value="คอปเปอร์" onclick="calculateTotal()"> คอปเปอร์<br>
-      <input type="checkbox" name="setB[]" value="เอเอ" onclick="calculateTotal()"> เอเอ<br>
-      <input type="checkbox" name="setB[]" value="จั๋ง" onclick="calculateTotal()"> จั๋ง<br>
-      <input type="checkbox" name="setB[]" value="ภีม" onclick="calculateTotal()"> ภีม<br>
-      <input type="checkbox" name="setB[]" value="ไม่ระบุ" onclick="calculateTotal()"> ไม่ระบุ<br>
+      <label>2.2 เลือกเมมเบอร์ที่จอง Set B:</label>
+      <div class="checkbox-group">
+        <label><input type="checkbox" name="setB[]" value="อลัน" onclick="calculateTotal()"> อลัน</label>
+        <label><input type="checkbox" name="setB[]" value="มาร์ค" onclick="calculateTotal()"> มาร์ค</label>
+        <label><input type="checkbox" name="setB[]" value="ขุนพล" onclick="calculateTotal()"> ขุนพล</label>
+        <label><input type="checkbox" name="setB[]" value="ฮาร์ท" onclick="calculateTotal()"> ฮาร์ท</label>
+        <label><input type="checkbox" name="setB[]" value="จินวุค" onclick="calculateTotal()"> จินวุค</label>
+        <label><input type="checkbox" name="setB[]" value="เน้ก" onclick="calculateTotal()"> เน้ก</label>
+        <label><input type="checkbox" name="setB[]" value="ไทย" onclick="calculateTotal()"> ไทย</label>
+        <label><input type="checkbox" name="setB[]" value="คอปเปอร์" onclick="calculateTotal()"> คอปเปอร์</label>
+        <label><input type="checkbox" name="setB[]" value="เอเอ" onclick="calculateTotal()"> เอเอ</label>
+        <label><input type="checkbox" name="setB[]" value="จั๋ง" onclick="calculateTotal()"> จั๋ง</label>
+        <label><input type="checkbox" name="setB[]" value="ภีม" onclick="calculateTotal()"> ภีม</label>
+        <label><input type="checkbox" name="setB[]" value="ไม่ระบุ" onclick="calculateTotal()"> ไม่ระบุ</label>
+      </div>
     </div>
 
     <label>3. ยอดโอน (ระบบจะคำนวณอัตโนมัติ):</label>
@@ -241,7 +261,7 @@
     <textarea name="address" rows="3" required></textarea>
     <div class="note">*ถ้าข้อมูลไม่ครบ ของตีกลับ ต้องออกค่าส่งใหม่เองนะคะ</div>
 
-    <label>5. แนบสลิปการโอน (.jpg, .png):</label>
+    <label>5. แนบสลิปการโอน</label>
     <input type="file" name="slip" id="slip" accept="image/*" required>
 
     <button type="submit">ส่งฟอร์ม</button>
