--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       border-radius: 8px;
       border: 1px solid #e0e0e0;
       cursor: pointer;
-      transition: background 0.2s;
+      transition:  0.2s;
     }
 
     .checkbox-group label:hover {
@@ -132,7 +132,7 @@
       font-weight: 600;
       cursor: pointer;
       margin-top: 35px;
-      transition: background 0.3s, transform 0.2s, box-shadow 0.3s;
+      transition:  0.3s, transform 0.2s, box-shadow 0.3s;
     }
 
     button:hover {
@@ -273,21 +273,28 @@
       const totalAmount = selectedCheckboxes.length * 300;
       document.getElementById("amount").value = totalAmount;
     }
-
+  
+    // ✅ เปลี่ยนจาก onclick เป็น event listener รวม
+    document.addEventListener("change", function (e) {
+      if (e.target.matches('input[type="checkbox"]')) {
+        calculateTotal();
+      }
+    });
+  
     const form = document.getElementById("paymentForm");
     const amountInput = document.getElementById("amount");
-
+  
     form.addEventListener("submit", async function (e) {
       e.preventDefault();
-
+  
       const slipFile = document.getElementById("slip").files[0];
       const reader = new FileReader();
       reader.onloadend = async function () {
         const base64String = reader.result.split(",")[1];
-
+  
         const setAValues = [...document.querySelectorAll('input[name="setA[]"]:checked')].map(el => el.value).join(", ");
         const setBValues = [...document.querySelectorAll('input[name="setB[]"]:checked')].map(el => el.value).join(", ");
-
+  
         const formData = new URLSearchParams();
         formData.append("twitter", form.twitter.value);
         formData.append("setA", setAValues);
@@ -295,12 +302,12 @@
         formData.append("totalAmount", form.totalAmount.value);
         formData.append("address", form.address.value);
         formData.append("slipBytes", base64String);
-
+  
         const response = await fetch("https://script.google.com/macros/s/AKfycbxv6yv8dOj3xHkpgNYqE8oxl83bVV0nkTeYwSmwEZkadR17NvBmcxPgteMZ8WlW1AqI/exec", {
           method: "POST",
           body: formData,
         });
-
+  
         const result = await response.text();
         alert(result);
         form.reset();
@@ -308,6 +315,6 @@
       };
       reader.readAsDataURL(slipFile);
     });
-  </script>
+  </script>  
 </body>
 </html>
